@@ -30,28 +30,28 @@ public class CxfMessageStreamExceptionTest extends CxfMessageCustomizedException
             public void configure() {
                 // START SNIPPET: onException
                 from("direct:start").onException(SoapFault.class).maximumRedeliveries(0).handled(true)
-                    .process(new Processor() {
-                        public void process(Exchange exchange) throws Exception {
-                            SoapFault fault = exchange
-                                .getProperty(Exchange.EXCEPTION_CAUGHT, SoapFault.class);
-                            exchange.getOut().setBody(fault);
-                        }
+                        .process(new Processor() {
+                            public void process(Exchange exchange) throws Exception {
+                                SoapFault fault = exchange
+                                        .getProperty(Exchange.EXCEPTION_CAUGHT, SoapFault.class);
+                                exchange.getMessage().setBody(fault);
+                            }
 
-                    }).end().to(serviceURI);
+                        }).end().to(serviceURI);
                 // END SNIPPET: onException
                 // START SNIPPET: MessageStreamFault
                 from(routerEndpointURI).process(new Processor() {
 
                     public void process(Exchange exchange) throws Exception {
-                        Message out = exchange.getOut();
+                        Message out = exchange.getMessage();
                         // Set the message body with the 
                         out.setBody(this.getClass().getResourceAsStream("SoapFaultMessage.xml"));
                         // Set the response code here
-                        out.setHeader(org.apache.cxf.message.Message.RESPONSE_CODE, new Integer(500));
+                        out.setHeader(org.apache.cxf.message.Message.RESPONSE_CODE, Integer.valueOf(500));
                     }
 
                 });
-             // END SNIPPET: MessageStreamFault
+                // END SNIPPET: MessageStreamFault
             }
         };
     }
