@@ -28,23 +28,24 @@ import java.util.concurrent.TimeUnit;
 import io.reactivex.Flowable;
 import org.apache.camel.component.reactive.streams.engine.DelayedMonoPublisher;
 import org.apache.camel.component.reactive.streams.support.TestSubscriber;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class DelayedMonoPublisherTest {
 
     private ExecutorService service;
 
-    @Before
+    @BeforeEach
     public void init() {
         service = new ScheduledThreadPoolExecutor(3);
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws Exception {
         service.shutdown();
         service.awaitTermination(1, TimeUnit.SECONDS);
@@ -253,37 +254,41 @@ public class DelayedMonoPublisherTest {
         sub.request(1);
 
         Integer res = queue.poll(1, TimeUnit.SECONDS);
-        assertEquals(new Integer(2), res);
+        assertEquals(Integer.valueOf(2), res);
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void testDataOrExceptionAllowed() throws Exception {
         DelayedMonoPublisher<Integer> pub = new DelayedMonoPublisher<>(service);
         Exception ex = new RuntimeException("An exception");
         pub.setException(ex);
-        pub.setData(1);
+        assertThrows(IllegalStateException.class,
+                () -> pub.setData(1));
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void testDataOrExceptionAllowed2() throws Exception {
         DelayedMonoPublisher<Integer> pub = new DelayedMonoPublisher<>(service);
         pub.setData(1);
         Exception ex = new RuntimeException("An exception");
-        pub.setException(ex);
+        assertThrows(IllegalStateException.class,
+                () -> pub.setException(ex));
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void testOnlyOneDataAllowed() throws Exception {
         DelayedMonoPublisher<Integer> pub = new DelayedMonoPublisher<>(service);
         pub.setData(1);
-        pub.setData(2);
+        assertThrows(IllegalStateException.class,
+                () -> pub.setData(2));
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void testOnlyOneExceptionAllowed() throws Exception {
         DelayedMonoPublisher<Integer> pub = new DelayedMonoPublisher<>(service);
         pub.setException(new RuntimeException("An exception"));
-        pub.setException(new RuntimeException("An exception"));
+        assertThrows(IllegalStateException.class,
+                () -> pub.setException(new RuntimeException("An exception")));
     }
 
 }
