@@ -23,14 +23,16 @@ import org.apache.camel.Exchange;
 import org.apache.camel.Processor;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.mock.MockEndpoint;
-import org.apache.camel.test.junit4.CamelTestSupport;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.apache.camel.test.junit5.CamelTestSupport;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.datasource.embedded.EmbeddedDatabase;
 import org.springframework.jdbc.datasource.embedded.EmbeddedDatabaseBuilder;
 import org.springframework.jdbc.datasource.embedded.EmbeddedDatabaseType;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
  *
@@ -41,10 +43,10 @@ public class SqlConsumerDeleteFailedTest extends CamelTestSupport {
     private JdbcTemplate jdbcTemplate;
 
     @Override
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         db = new EmbeddedDatabaseBuilder()
-            .setType(EmbeddedDatabaseType.DERBY).addScript("sql/createAndPopulateDatabase.sql").build();
+                .setType(EmbeddedDatabaseType.DERBY).addScript("sql/createAndPopulateDatabase.sql").build();
 
         jdbcTemplate = new JdbcTemplate(db);
 
@@ -52,7 +54,7 @@ public class SqlConsumerDeleteFailedTest extends CamelTestSupport {
     }
 
     @Override
-    @After
+    @AfterEach
     public void tearDown() throws Exception {
         super.tearDown();
 
@@ -77,8 +79,10 @@ public class SqlConsumerDeleteFailedTest extends CamelTestSupport {
         // give it a little tine to delete
         Thread.sleep(500);
 
-        assertEquals("Should have deleted 2 rows", new Integer(1), jdbcTemplate.queryForObject("select count(*) from projects", Integer.class));
-        assertEquals("Should be AMQ project that is BAD", "AMQ", jdbcTemplate.queryForObject("select PROJECT from projects where license = 'BAD'", String.class));
+        assertEquals(Integer.valueOf(1), jdbcTemplate.queryForObject("select count(*) from projects", Integer.class),
+                "Should have deleted 2 rows");
+        assertEquals("AMQ", jdbcTemplate.queryForObject("select PROJECT from projects where license = 'BAD'", String.class),
+                "Should be AMQ project that is BAD");
     }
 
     @Override
@@ -89,19 +93,19 @@ public class SqlConsumerDeleteFailedTest extends CamelTestSupport {
                 getContext().getComponent("sql", SqlComponent.class).setDataSource(db);
 
                 from("sql:select * from projects where license <> 'BAD' order by id"
-                        + "?initialDelay=0&delay=50"
-                        + "&consumer.onConsume=delete from projects where id = :#id"
-                        + "&consumer.onConsumeFailed=update projects set license = 'BAD' where id = :#id")
-                    .process(new Processor() {
-                        @Override
-                        public void process(Exchange exchange) throws Exception {
-                            Object project = exchange.getIn().getBody(Map.class).get("PROJECT");
-                            if ("AMQ".equals(project)) {
-                                throw new IllegalArgumentException("Cannot handled AMQ");
-                            }
-                        }
-                    })
-                    .to("mock:result");
+                     + "?initialDelay=0&delay=50"
+                     + "&consumer.onConsume=delete from projects where id = :#id"
+                     + "&consumer.onConsumeFailed=update projects set license = 'BAD' where id = :#id")
+                             .process(new Processor() {
+                                 @Override
+                                 public void process(Exchange exchange) throws Exception {
+                                     Object project = exchange.getIn().getBody(Map.class).get("PROJECT");
+                                     if ("AMQ".equals(project)) {
+                                         throw new IllegalArgumentException("Cannot handled AMQ");
+                                     }
+                                 }
+                             })
+                             .to("mock:result");
             }
         };
     }
