@@ -20,14 +20,16 @@ import java.io.File;
 
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.mock.MockEndpoint;
-import org.apache.camel.test.junit4.CamelTestSupport;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.apache.camel.test.junit5.CamelTestSupport;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.datasource.embedded.EmbeddedDatabase;
 import org.springframework.jdbc.datasource.embedded.EmbeddedDatabaseBuilder;
 import org.springframework.jdbc.datasource.embedded.EmbeddedDatabaseType;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class SqlProducerJSONTest extends CamelTestSupport {
 
@@ -35,10 +37,10 @@ public class SqlProducerJSONTest extends CamelTestSupport {
     private JdbcTemplate jdbcTemplate;
 
     @Override
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         db = new EmbeddedDatabaseBuilder()
-            .setType(EmbeddedDatabaseType.DERBY).addScript("sql/createAndPopulateDatabase2.sql").build();
+                .setType(EmbeddedDatabaseType.DERBY).addScript("sql/createAndPopulateDatabase2.sql").build();
 
         jdbcTemplate = new JdbcTemplate(db);
 
@@ -46,10 +48,10 @@ public class SqlProducerJSONTest extends CamelTestSupport {
     }
 
     @Override
-    @After
+    @AfterEach
     public void tearDown() throws Exception {
         super.tearDown();
-        
+
         db.shutdown();
     }
 
@@ -64,7 +66,7 @@ public class SqlProducerJSONTest extends CamelTestSupport {
 
         mock.assertIsSatisfied();
 
-        assertEquals(new Integer(4), jdbcTemplate.queryForObject("select count(*) from projects", Integer.class));
+        assertEquals(Integer.valueOf(4), jdbcTemplate.queryForObject("select count(*) from projects", Integer.class));
     }
 
     @Override
@@ -74,8 +76,8 @@ public class SqlProducerJSONTest extends CamelTestSupport {
                 getContext().getComponent("sql", SqlComponent.class).setDataSource(db);
 
                 from("direct:start")
-                    .to("sql:insert into projects (id, project, license, description) values (4, 'Food, Inc', 'ASF', #)")
-                    .to("mock:result");
+                        .to("sql:insert into projects (id, project, license, description) values (4, 'Food, Inc', 'ASF', #)")
+                        .to("mock:result");
             }
         };
     }
